<resources>
    <string name="app_name">RedditClone</string>
    <!-- Navigation Drawer -->
    <string name="nav_inbox">Inbox</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_create">Create</string>
    <string name="nav_answers">Answers</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_curate">Curate your file</string>
    <string name="nav_premium">Reddit Premium</string>
    <string name="nav_drafts">Drafts</string>
    <string name="nav_community">Create a community</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_vault">Vault</string>
    <string name="nav_saved">Saved</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_log_out">Log out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_my_profile" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>